# rust-web-programming

./: README.md  package-lock.json
001_todo_app/: Cargo.toml  state.json
001_todo_app/src/: main.rs  processes.rs  state.rs
002_web_app/src/: main.rs
003_async_await_app/: Cargo.toml
004_processing_http_requests/: .gitignore  Cargo.toml  state.json
005_data_persistence/: README.md  docker-compose.yml
005_data_persistence/web_app/: Cargo.toml  diesel.toml  docker-compose.yml  state.json
005_data_persistence/web_app/css/: base.css
005_data_persistence/web_app/migrations/2024-12-10-035434_create_to_do_items/: up.sql
005_data_persistence/web_app/migrations/2024-12-11-194152_create_users/: down.sql  up.sql
005_data_persistence/web_app/scripts/: wait_for_database.sh
005_data_persistence/web_app/src/: config.rs  database.rs  jwt.rs  main.rs  schema.rs
005_data_persistence/web_app/src/json_serialization/: to_do_items.rs
005_data_persistence/web_app/src/models/item/: item.rs  new_item.rs
005_data_persistence/web_app/src/models/user/: new_user.rs  user.rs
005_data_persistence/web_app/src/to_do/structs/: pending.rs
005_data_persistence/web_app/src/views/: mod.rs
005_data_persistence/web_app/src/views/app/: content_loader.rs
005_data_persistence/web_app/src/views/auth/: login.rs  logout.rs  mod.rs
005_data_persistence/web_app/src/views/to_do/: create.rs  delete.rs  edit.rs  get.rs  mod.rs
005_data_persistence/web_app/src/views/users/: create.rs
005_data_persistence/web_app/templates/: main.html
front_end/: package-lock.json  package.json
(+45 files in other folders)
