[package]
name = "web_app"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.9.0"
serde = {version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"
actix-service = "2.0.2"
futures = "0.3.31"
actix-cors = "0.7.0"
diesel = { version = "2.2.6", features = ["postgres", "chrono", "r2d2"] }
dotenv = "0.15.0"
chrono = {version = "0.4.38", features = ["serde"]}
serde_yaml = "0.9.34"
lazy_static = "1.5.0"
bcrypt = "0.16.0"
uuid = {version = "1.11.0", features = ["serde", "v4"]}
jsonwebtoken = "9.3.0"
